--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -116,13 +116,15 @@ Zero-Copy I/O for Low-Latency GPU Computing
 \thispagestyle{empty}
 
 \input{abstract.tex}
-%\keywords{GPGPU, Zero-Copy I/O, Fusion and Plasma, CPS}
+\keywords{GPGPU, Zero-Copy I/O, Fusion and Plasma, CPS}
 
 \input{introduction.tex}
 \input{system_model.tex}
 \input{io_processing.tex}
+\input{implementation.tex}
 \input{case_study.tex}
 \input{benchmarking.tex}
+\input{related_work.tex}
 
 \bibliographystyle{abbrv}
 \bibliography{references}
