--- a/draft/introduction.tex
+++ b/draft/introduction.tex
@@ -21,7 +21,7 @@ Figure~\ref{fig:tokamak} shows the HBT-EP Tokamak at Columbia
 University~\cite{Maurer_PPCF11,Rath_FED12} that magnetically controls
 the 3-D perturbed equilibrium state of the plasma~\cite{Boozer_PP99}.
 It is required to process 96 inputs and 64 outputs of 16-bit data at a
-sampling rate of a few microseconds.
+control rate of a few microseconds.
 An initial attempt of the Columbia team employed fast CPUs or FPGAs, but
 even the simplified algorithm failed to run within 20$\mu$s.
 An alternative approach was to parallelize the algorithm using the
